# stationary_base_docking

./: CMakeLists.txt  package.xml  setup.py
plots/: filter_plot.py  irl_filtered_08-Aug-08:51.csv  irl_filtered_08-Aug-08:59.csv  irl_filtered_10-Sep-08:51.csv  irl_filtered_10-Sep-09:05.csv  irl_filtered_12-Sep-08:46.csv  irl_filtered_12-Sep-08:54.csv  irl_filtered_12-Sep-09:04.csv  irl_filtered_19-Aug-09:07.csv  irl_raw_08-Aug-08:51.csv  irl_raw_08-Aug-08:59.csv  irl_raw_10-Sep-08:51.csv  irl_raw_10-Sep-09:05.csv  irl_raw_12-Sep-08:46.csv  irl_raw_12-Sep-08:54.csv  irl_raw_12-Sep-09:04.csv  irl_raw_19-Aug-09:07.csv  irl_setpoint_08-Aug-08:51.csv  irl_setpoint_08-Aug-08:59.csv  irl_setpoint_10-Sep-09:05.csv  irl_setpoint_19-Aug-09:07.csv  irl_transform_10-Sep-08:51.csv  irl_transform_10-Sep-09:05.csv  irl_transform_12-Sep-08:46.csv  irl_transform_12-Sep-08:54.csv  irl_transform_12-Sep-09:04.csv  irl_transform_19-Aug-09:07.csv
src/stationary_base_docking/: common.py  led_detection.py  test.py  test_indoor.py
vids/: vid_capture.py
